# ova

./: .env.example  README.md  cli.py  index.html  ova  ova.sh  pyproject.toml  start-pocket-kobold.bat  start.bat  stop.bat
ova/: api.py  mlx_audio.py  mlx_pipeline.py  pipeline.py  utils.py
profiles/sydney/: prompt.txt  ref_text.txt
