[project]
name = "ova"
version = "0.1.0"
description = "Outrageous Voice Assistant - Fully local end-to-end voice assistant pipeline using open weight models."
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    #"numpy>=2.3.5",
    #"soxr>=1.0.0",
    #"fastapi>=0.128.0",
    #"ollama>=0.6.1",
    #"uvicorn>=0.40.0",
    #"pip>=25.2",
    "numpy",
    "soxr",
    "fastapi",
    "ollama",
    "uvicorn",
    "pip",
]

[project.optional-dependencies]
# Apple Silicon / MLX backend
mlx = [
    "mlx-audio>=0.3.1",
]

# Torch / CUDA backend
cuda = [
    #"torch==2.9.1",
    "torch",
    "torchaudio",
    #"torchaudio==2.9.1",
    #"flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.6.8/flash_attn-2.8.3%2Bcu130torch2.9-cp312-cp312-linux_x86_64.whl",
    #"flash-attn",
    "nemo-toolkit[asr]",
    "qwen-tts",
    "kokoro",
    "cuda-python",
    #"qwen-tts>=0.0.5",
    #"cuda-python>=12.3",
    #"kokoro>=0.9.4",
]

#[[tool.uv.index]]
#name = "pytorch-cu130"
#url = "https://download.pytorch.org/whl/cu130"
#explicit = true

#[tool.uv.sources]
#torch = { index = "pytorch-cu130" }
#torchaudio = { index = "pytorch-cu130" }

#[tool.uv.extra-build-dependencies]
#flash-attn = ["torch"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ova*"]
exclude = ["profiles*"]
